# projet_SE_test

./: CMakeLists.txt  CMakeLists.txt.user.e94c2a2  fifo.cpp  fifo.h  file.cpp  file.h  liste.cpp  liste.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pcte.cpp  pcte.h  pcter.cpp  pcter.h  priorite_avec_requisition.cpp  priorite_avec_requisition.h  priorite_sans_requisition.cpp  priorite_sans_requisition.h  processus.cpp  processus.h  tourniquet.cpp  tourniquet.h
